# ThermalCaptureIRnet_Driver

./: .gitignore  CMakeLists.txt  FlirGstOpenCV.cpp  FlirTau2.cpp  GstOpenCV.cpp  arducamacquisition.txt  fliracquisition.txt  syncro.cpp
generator_code/: CMakeLists.txt  VideoGenerator.cpp  videoGeneratorOpenCV.cpp
test_code/: FlirGstAppsink.cpp
